--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -18,4 +18,4 @@ jobs:
           yarn deploy
         working-directory: docs
         env:
-          GIT_USER: ${{ secrets.GITHUB_TOKEN }}
+          GIT_USER: ${{ secrets.ACCESS_TOKEN }}
